<resources>

    <string name="app_name">밍글</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Action Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_hunt">HuntActivity</string>
    <string name="title_activity_chatroom">ChatroomActivity</string>
    <string name="title_activity_chat_room">ChatRoomActivity</string>
    <string name="tab1title">Top</string>
    <string name="tab2title">All</string>
    <string name="tab3title">Mingling</string>
    <string name="tab4title">Setting</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="sms"></string>
    <string name="send">send</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_photo_view">PhotoViewActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_region_chatroom">RegionChatroomActivity</string>
    <string name="title_activity_transparent">TransparentActivity</string>
    <string name="photo_description">Click to add Photo</string>
    <string name="minge_start_button_string">Mingle</string>
    <string name="erase_button_description">erase photo</string>
    <string name="nickname_placeholder">5글자 닉네임을 입력해주세요.</string>
    <string name="launch">launch</string>
    <string name="title_activity_search_setiing">SearchSetiingActivity</string>
    <string name="title_activity_search_setting">SearchSettingActivity</string>
    <string name="search_distance">Search Distance :</string>
    <string name="refresh_loc">Refresh Location</string>
    <string name="push_notification">Push Notification</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="select_number">Size of searching group</string>
    <string name="setting_option_profile">내 프로필</string>
    <string name="setting_option_search">설정</string>
    <string name="setting_option_delete">계정 삭제</string>
    <string name="cancel">취소</string>
    <string name="allow">허용</string>
    <string name="ok">확인</string>
    <string name="view">보기</string>
    <string name="close">닫기</string>
    <string name="gps_location_setting">GPS 위치 설정</string>
    <string name="account_delete">계정 삭제</string>
    <string name="message_error">메시지 오류</string>
    <string name="update_complete">사용자 정보가 업데이트 되었습니다.</string>
    <string name="application_update_question">소프트웨어 업데이트를 하시겠습니까?</string>
    <string name="application_update_required">어플리케이션 업데이트</string>
    <string name="account_delete_alert">계정을 삭제하시겠습니까?</string>
    <string name="user_no_exist_alert">사용자가 존재하지 않습니다.</string>
    <string name="gps_disabled_alert">GPS 위치 탐색기가 해제되어있습니다. 허용하시겠습니까?</string>
    <string name="gps_cannot_find_location">현재 위치를 탐색할 수 없습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="vote_success">투표가 완료되었습니다.</string>
    <string name="vote_impossible">이미 투표하셨습니다.</string>
    <string name="vote_fail">투표 시간이 아닙니다.</string>
    <string name="not_event_time">현재 투표 시간이 아닙니다.</string>
    <string name="network_error">네트워크 상태가 원활하지 않습니다. 네트워크 상태를 확인하시고 다시 시도해주세요.</string>
    <string name="no_more_candidates">현재 근처에 밍글 유저가 더 존재하지 않습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="invalid_input">다시 입력해주세요.</string>
    <string name="no_photo_input">사진을 입력해주세요.</string>
    <string name="photo_input_invalid">입력하신 사진이 존재하지 않습니다.</string>
    <string name="name_input_wrong_length">5글자 닉네임을 입력해주세요.</string>
    <string name="name_input_invalid">닉네임에 여백을 없애주세요.</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_intro">IntroActivity</string>

    <string name="photo_option_title">사진 추가</string>
    <string name="photo_option_camera">사진 찍기</string>
    <string name="photo_option_library">사진첩에서 불러오기</string>
    <string name="photo_delete">이 사진을 삭제하시겠습니까?</string>
    <string name="select_file">파일을 선택해주세요.</string>
    <string name="location_error">현재 위치를 파악할 수 없습니다.</string>
    <string name="location_error_title">GPS 위치 정보</string>
    
    <string name="vote_time_notif">투표시간 18:00 ~ 01:00</string>
    
    <string name="no_face_recognized_msg">얼굴이 인식되지 않습니다. 다른 사진으로 올려주세요.</string>
    <string name="no_face_recognized_title">얼굴 인식 실패</string>
    
    <string name="chatting_start_string">채팅 시작</string>
    
</resources>