<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <SeekBar
        android:id="@+id/distBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        android:max="5" />

    <TextView
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/search_distance" />

    <TextView
        android:id="@+id/distText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText1"
        android:layout_alignBottom="@+id/editText1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/distBar"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text="@string/refresh_loc" />

    <Button
        android:id="@+id/refreshLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:text="@string/refresh_loc" />

    <TextView
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/refreshLoc"
        android:ems="10"
        android:text="@string/push_notification" />

    <RadioGroup
        android:id="@+id/notification_setup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/refreshLoc"
        android:layout_below="@+id/editText3"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/notification_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on" />

        <RadioButton
            android:id="@+id/notification_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off" />
   		
    </RadioGroup>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/notification_setup"
        android:layout_marginTop="20dp"
        android:text="@string/select_number" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:text="1" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox1"
        android:layout_alignBottom="@+id/checkBox1"
        android:layout_marginLeft="13dp"
        android:layout_toRightOf="@+id/checkBox1"
        android:text="2" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox2"
        android:layout_alignBottom="@+id/checkBox2"
        android:layout_marginLeft="13dp"
        android:layout_toRightOf="@+id/checkBox2"
        android:text="3" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox3"
        android:layout_alignBottom="@+id/checkBox3"
        android:layout_marginLeft="13dp"
        android:layout_toRightOf="@+id/checkBox3"
        android:text="4" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox4"
        android:layout_alignBottom="@+id/checkBox4"
        android:layout_marginLeft="13dp"
        android:layout_toRightOf="@+id/checkBox4"
        android:text="5" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBox5"
        android:layout_alignBottom="@+id/checkBox5"
        android:layout_marginLeft="13dp"
        android:layout_toRightOf="@+id/checkBox5"
        android:text="6" />

</RelativeLayout>