<?xml version="1.0"?>

<RelativeLayout 
  tools:context=".MainActivity" 
  android:paddingBottom="@dimen/activity_vertical_margin" 
  android:paddingTop="@dimen/activity_vertical_margin" 
  android:paddingRight="@dimen/activity_horizontal_margin" 
  android:paddingLeft="@dimen/activity_horizontal_margin" 
  android:layout_height="match_parent" 
  android:layout_width="match_parent" 
  android:id="@+id/main_parent"
  android:background="@color/titlebackgroundcolor"
  xmlns:tools="http://schemas.android.com/tools" 
  xmlns:android="http://schemas.android.com/apk/res/android">

   <ImageView
       android:id="@+id/daily_question_logo"
       android:layout_width="@dimen/question_logo_size"
       android:layout_height="@dimen/question_logo_size"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true"
       android:layout_alignParentTop="true"
       android:background="@drawable/themelike" />

    <LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:baselineAligned="false"
	    android:layout_marginLeft="@dimen/small_margin"
	   
	    android:background="@drawable/votecomment"
	    android:layout_toRightOf="@+id/daily_question_logo"
	 	android:layout_alignTop="@+id/daily_question_logo"
		android:layout_alignBottom="@+id/daily_question_logo"
		android:layout_alignRight="@+id/photoView3"
	    android:orientation="vertical" >
    
		    <TextView
		        android:id="@+id/daily_theme_individual"
		        android:layout_height="wrap_content" 
			 	android:layout_width="wrap_content"
			 	android:layout_marginLeft="10dp"
			 	android:layout_marginRight="10dp"
			 	android:layout_marginTop="7dp"
			 	android:textSize="17sp"
			 	android:ellipsize="end"
			 	android:maxLines="1"
			 	/>
		    <TextView
		        android:layout_height="wrap_content" 
			 	android:layout_width="wrap_content"
			 	android:layout_marginRight="30dp"
			 	android:layout_marginTop="3dp"
			 	android:layout_marginLeft="10dp"
			 	android:maxHeight="30dp"
			 	android:maxLines="2"
			 	android:textSize="15sp"
			 	android:textColor="#FF4444"
       			android:ellipsize="end"
			 	android:text="@string/vote_time_notif"
			 	/>
  	</LinearLayout>
		
	<!-- 

	+++++	PHOTO VIEWS   +++++

							-->  
	<ImageView 
	    android:id="@+id/photoView1"
	    android:layout_height="@dimen/photo_view_size" 
	    android:layout_width="@dimen/photo_view_size" 
	    android:layout_marginLeft="@dimen/option_margin"
	    android:layout_marginTop="@dimen/option_margin"
	    android:layout_below="@+id/daily_question_logo"
	    android:layout_alignParentLeft="true" 
	    android:theme="@style/PictureViewTheme" 
	    android:cropToPadding="true" 
	    android:contentDescription="@string/photo_description"
	    android:background="@drawable/photo_background"
	    android:longClickable="false"
	    android:clickable="true" />
	
	<ImageView
	    android:id="@+id/photoView2"
	    android:layout_width="wrap_content"
	    android:layout_height="95dp"
	    android:layout_alignTop="@+id/photoView1"
	    android:layout_alignParentRight="true" 
	    android:layout_marginRight="@dimen/option_margin"
	    android:layout_marginLeft="@dimen/photo_margin"
	    android:layout_toRightOf="@+id/photoView1"
	    android:adjustViewBounds="false"
	    android:background="@color/photobackgroundcolor"
	    android:baselineAlignBottom="false"
	    android:clickable="true"
	    android:contentDescription="@string/photo_description"
	    android:cropToPadding="true"
	    android:longClickable="false" />
	<ImageView 
	    android:id="@+id/photoView3" 
	    android:layout_height="wrap_content" 
	    android:layout_width="wrap_content"
	    android:background="@color/photobackgroundcolor"
	    android:cropToPadding="true" 
	    android:contentDescription="@string/photo_description"
	    android:clickable="true"
	    android:longClickable="false" 
	    android:layout_alignRight="@+id/photoView2" 
	    android:layout_alignBottom="@+id/photoView1"
	    android:layout_alignStart="@+id/photoView2" 
	    android:layout_alignLeft="@+id/photoView2" 
	    android:layout_below="@+id/photoView2" 
	    android:layout_marginTop="@dimen/photo_margin"/>

	
	<!-- 

	+++++	ADD BUTTONS   +++++

							-->
	<ImageView 
	    android:layout_height="20dp" 
	    android:layout_width="20dp" 
	    android:layout_marginRight="5dp"
	    android:layout_marginBottom="5dp"
	    android:layout_alignRight="@+id/photoView1" 
	    android:layout_alignBottom="@+id/photoView1" 
	    android:cropToPadding="true" 
	    android:contentDescription="@string/erase_button_description"
	    android:background="@drawable/photo_plus"
	    android:longClickable="true" 
	    android:id="@+id/add1"/>
	<ImageView 
	    android:layout_height="20dp" 
	    android:layout_width="20dp" 
	    android:layout_marginRight="5dp"
	    android:layout_marginBottom="5dp"
	    android:layout_alignRight="@+id/photoView2" 
	    android:layout_alignBottom="@+id/photoView2" 
	    android:cropToPadding="true" 
	    android:contentDescription="@string/erase_button_description"
	    android:background="@drawable/photo_plus"
	    android:longClickable="true" 
	    android:id="@+id/add2"/>
	<ImageView 
	    android:layout_height="20dp" 
	    android:layout_width="20dp" 
	    android:layout_marginRight="5dp"
	    android:layout_marginBottom="5dp"
	    android:layout_alignRight="@+id/photoView3" 
	    android:layout_alignBottom="@+id/photoView3" 
	    android:cropToPadding="true" 
	    android:contentDescription="@string/erase_button_description"
	    android:background="@drawable/photo_plus"
	    android:longClickable="true" 
	    android:id="@+id/add3"/>
	
	<!-- 

	+++++	NICKNAME  +++++

							-->  
	
	<ImageView 
	    android:id="@+id/nicknamelabel" 
	    android:layout_width="@dimen/option_label_width" 
	    android:layout_height="@dimen/option_label_height" 
	    android:background="@drawable/nickname"
	    android:cropToPadding="true" 
	    android:contentDescription="@string/photo_description"
	    android:longClickable="false"  
	    android:layout_alignStart="@+id/photoView1" 
	    android:layout_alignLeft="@+id/photoView1" 
	    android:layout_below="@+id/photoView1"
	    android:layout_marginTop="@dimen/option_margin"/>
	
	<EditText
	    android:id="@+id/nicknameTextView"
	    android:layout_alignRight="@+id/photoView3"
	    android:layout_alignTop="@+id/nicknamelabel"
	    android:layout_alignBottom="@+id/nicknamelabel"
	    android:layout_toRightOf="@+id/nicknamelabel"
	    android:inputType="text"
	    android:paddingLeft="3dp"
	    android:paddingRight="0dp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:background="@color/photobackgroundcolor"
	    android:hint="@string/nickname_placeholder"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:imeActionLabel="@string/launch"
	    android:maxLength="6" />
	
	<!-- 

	+++++	SEX CHOICE   +++++

							-->  	
	
	<ImageView 
	    android:layout_width="@dimen/option_label_width" 
	    android:layout_height="@dimen/option_label_height" 
	    android:background="@drawable/genderchoice"
	    android:cropToPadding="true" 
	    android:contentDescription="@string/photo_description"
	    android:longClickable="false"  
	    android:layout_alignStart="@+id/photoView1" 
	    android:layout_alignLeft="@+id/photoView1" 
	    android:layout_below="@+id/nicknamelabel"
	    android:id="@+id/sexlabel" 
	    android:layout_marginTop="@dimen/option_margin"/>

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:baselineAligned="false"
	    android:layout_alignTop="@+id/sexlabel"
	    android:layout_alignRight="@+id/photoView3"
		android:layout_alignBottom="@+id/sexlabel"
		android:layout_toRightOf="@+id/sexlabel"
		
	    android:orientation="horizontal" >
			<Button 
			    android:layout_weight="1"
			    android:layout_height="match_parent" 
			    android:layout_width="match_parent" 
			    android:id="@+id/womanbutton" 
			    android:background="@drawable/genderchoice_notwoman"
			    android:onClick="SexOptionChanged"/>
			<Button 
			    android:layout_weight="1"
			    android:layout_height="match_parent" 
			    android:layout_width="match_parent" 
			    android:id="@+id/manbutton" 
			   android:background="@drawable/genderchoice_man"
			    android:onClick="SexOptionChanged"/>
			
	</LinearLayout>
	
	<!-- 

	+++++	MEMBER NUM   +++++

							--> 
	
	<ImageView 
	    android:layout_width="@dimen/option_label_width" 
	    android:layout_height="@dimen/member_option_label_height" 
	    android:background="@drawable/member"
	    android:cropToPadding="true" 
	    android:contentDescription="@string/photo_description"
	    android:longClickable="false"  
	    android:layout_alignStart="@+id/photoView1" 
	    android:layout_alignLeft="@+id/photoView1" 
	    android:layout_below="@+id/sexlabel"
	    android:id="@+id/memberlabel" 
	    android:layout_marginTop="@dimen/option_margin"/>
	<ImageView
	    android:layout_height="wrap_content" 
	    android:layout_width="match_parent" 
	    android:id="@+id/member_background" 
	    android:background="@color/photobackgroundcolor"
	    android:layout_alignTop="@+id/memberlabel"
	    android:layout_alignBottom="@+id/memberlabel"
	    android:contentDescription="@string/photo_description"
	    android:layout_toRightOf="@+id/memberlabel"
	    android:layout_alignRight="@+id/photoView3"/>
	<Button 
	    android:layout_height="wrap_content" 
	    android:layout_width="@dimen/member_counter_width" 
	    android:id="@+id/member_1" 
	    android:background="@drawable/peoplenumberpicon"
	    android:adjustViewBounds="true"
	    android:layout_alignTop="@+id/memberlabel"
	    android:layout_alignBottom="@+id/memberlabel"
	    android:layout_toRightOf="@+id/memberlabel"
	    android:layout_marginTop="@dimen/small_margin"
	     android:layout_marginBottom="@dimen/small_margin"
	      android:layout_marginLeft="@dimen/member_margin"
	       android:layout_marginRight="@dimen/member_margin"
	    android:onClick="MemberNumberSelected"/>
	
	<Button 
	    android:layout_height="wrap_content" 
	    android:layout_width="@dimen/member_counter_width" 
	    android:adjustViewBounds="true"
	    android:id="@+id/member_2" 
	    android:background="@drawable/peoplenumberpicon"
	    android:layout_alignTop="@+id/memberlabel"
	    android:layout_alignBottom="@+id/memberlabel"
	    android:layout_toRightOf="@+id/member_1"
	    android:layout_marginTop="@dimen/small_margin"
	     android:layout_marginBottom="@dimen/small_margin"
	      android:layout_marginLeft="@dimen/member_margin"
	       android:layout_marginRight="@dimen/member_margin"
	    android:onClick="MemberNumberSelected"/>
	<Button 
	    android:layout_height="wrap_content" android:layout_width="@dimen/member_counter_width" 
	    android:id="@+id/member_3" 
	    android:adjustViewBounds="true"
	    android:background="@drawable/peoplenumberpicon"
	    android:layout_alignTop="@+id/memberlabel"
	    android:layout_alignBottom="@+id/memberlabel"
	    android:layout_toRightOf="@+id/member_2"
	    android:layout_marginTop="@dimen/small_margin"
	     android:layout_marginBottom="@dimen/small_margin"
	      android:layout_marginLeft="@dimen/member_margin"
	       android:layout_marginRight="@dimen/member_margin"
	    android:onClick="MemberNumberSelected"/>
	<Button 
	    android:layout_height="wrap_content" 
	    android:layout_width="@dimen/member_counter_width" 
	    android:adjustViewBounds="true"
	    android:id="@+id/member_4" 
	    android:background="@drawable/peoplenumberpicon"
	    android:layout_alignTop="@+id/memberlabel"
	    android:layout_alignBottom="@+id/memberlabel"
	    android:layout_toRightOf="@+id/member_3"
	    android:layout_marginTop="@dimen/small_margin"
	     android:layout_marginBottom="@dimen/small_margin"
	      android:layout_marginLeft="@dimen/member_margin"
	       android:layout_marginRight="@dimen/member_margin"
	    android:onClick="MemberNumberSelected"/>
	<Button 
	    android:layout_height="wrap_content" 
	    android:layout_width="@dimen/member_counter_width" 
	    android:id="@+id/member_5" 
	    android:adjustViewBounds="true"
	    android:background="@drawable/peoplenumberpicon"
	    android:layout_alignTop="@+id/memberlabel"
	    android:layout_alignBottom="@+id/memberlabel"
	    android:layout_toRightOf="@+id/member_4"
	    android:layout_marginTop="@dimen/small_margin"
	     android:layout_marginBottom="@dimen/small_margin"
	      android:layout_marginLeft="@dimen/member_margin"
	       android:layout_marginRight="@dimen/member_margin"
	    android:onClick="MemberNumberSelected"/>
	<Button 
	    android:layout_height="wrap_content" 
	    android:layout_width="@dimen/member_counter_width" 
	    android:id="@+id/member_6" 
	    android:adjustViewBounds="true"
	    android:background="@drawable/peoplenumberpicon"
	    android:layout_alignTop="@+id/memberlabel"
	    android:layout_alignBottom="@+id/memberlabel"
	    android:layout_toRightOf="@+id/member_5"
	    android:layout_marginTop="@dimen/small_margin"
	     android:layout_marginBottom="@dimen/small_margin"
	      android:layout_marginLeft="@dimen/member_margin"
	       android:layout_marginRight="@dimen/member_margin"
	    android:onClick="MemberNumberSelected"/>
	
	<RelativeLayout
	    android:layout_height="50dp" 
	    android:layout_width="fill_parent" 
	    android:id="@+id/enter_button" 
	    android:layout_alignRight="@+id/photoView3"
	    android:layout_alignLeft="@+id/photoView1"
	    android:layout_below="@+id/memberlabel"
	    android:layout_marginTop="@dimen/option_margin"
	    android:background="@color/mingle_button_green"
	    android:onClick="userCreateButtonPressed">
			<ImageView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_centerInParent="true"
			    android:background="@drawable/entry_button" />
			</RelativeLayout>
	
	<RelativeLayout 
	    android:layout_height="50dp" 
	    android:layout_width="match_parent" 
	    android:layout_alignRight="@+id/photoView3"
	    android:background="@color/mingle_button_green"
	    android:id="@+id/modify_button" 
	    android:layout_alignLeft="@+id/photoView1"
	    android:layout_below="@+id/memberlabel"
	    android:layout_marginTop="@dimen/option_margin"
	    android:text="edit"
	    android:onClick="modifyUserData">
			
	    <ImageView
	        	android:adjustViewBounds="true"
			    android:layout_width="45dp"
			    android:layout_height="25dp"
			    android:layout_centerInParent="true"
			    android:background="@drawable/edit_complete" />
	    
	    
	</RelativeLayout>

</RelativeLayout>